--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "Axhon Ruiz-Gonzalez <axhonruiz@gmail.com>",
   "dependencies": {
     "@types/node": "^8.0.7",
-    "@types/react": "15.0.21",
-    "@types/react-dom": "0.14.23",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.5",
     "gatsby": "^2.18.25",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-typescript": "^1.4.10",
-    "react": "^16.12.0"
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-typescript": "^2.1.26",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "keywords": [
     "gatsby, typescript"
