--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.15",
-    "prettier": "^1.8.2"
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   }
 }
