--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gatsby-plugin-typescript": "^2.1.26",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-social-icons": "^4.1.0"
   },
   "keywords": [
     "gatsby, typescript"
