--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.4.0",
+    "gatsby-plugin-sass": "^2.1.29",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5"
   }
